# state

./: .env.sh  .gitignore  .mise.sh  README.md  conf  dev.sh  dist.sh  gen.coffee  initDb.sh  package.json  pg.sql  test.sh
api/: README.md  README.mdt  dev.sh  dist.sh  out.txt  package.json
api/cf/: .dev.vars  .dev.vars.sha256  .gitignore  dev.sh  package.json  wrangler.toml
api/sh/: dev.vars.sh
api/src/: initSend.coffee  mail.coffee  main.coffee  ping.coffee  send.coffee  sendmail.coffee  state.js
rust/: .dev  .env  .gitignore  .project.sh  .run.sh  Cargo.toml  Dockerfile  dev.sh  dist.sh  docker-compose.yml  docker.sh  fly.secret.env.set.sh  fly.toml  log.sh  run.sh
rust/host_ip/: Cargo.toml
rust/host_ip/src/: lib.rs
rust/ipv6_proxy/: Cargo.toml
rust/ipv6_proxy/src/: lib.rs
rust/ipv6_proxy/tests/: main.rs
rust/pg_/: Cargo.toml  test.sh
rust/pg_/src/: heartbeat.rs  lib.rs
rust/pg_/tests/: main.rs
rust/sh/: clippy.sh  cpso.sh  dist.coffee  env.sh  flyInit.sh
rust/smtp/: Cargo.toml
rust/smtp/.shuttle/: config.toml
rust/smtp/src/: err.rs  lib.rs  main.rs  ping.rs  smtp.rs
rust/smtptls/: Cargo.toml
rust/smtptls/src/: lib.rs
rust/srv/: Cargo.toml
rust/srv/src/: cron.rs  main.rs  route.rs
rust/srv/src/url/: index.rs
sh/: run.sh  upgrade.sh
src/: new.sh
src/_tmpl/: Conn.coffee  Ping.coffee  deno.jsonc  main.coffee  raise.js
src/kvrocks/: Ping.coffee  PingSentinel.coffee  Ver.coffee  deno.jsonc  main.coffee  run.coffee  test.coffee
src/kvrocks/conf/: kvrocks.js
src/mysql/: Conn.coffee  Ping.coffee  deno.jsonc  main.coffee  raise.js  run.coffee  test.coffee
src/mysql/conf/: IPV4.js
src/warn/: Conn.coffee  Ping.coffee  deno.jsonc  main.coffee  raise.js  test.coffee
src/warn/conf/: mysql.js
src_old/: STATE.coffee  app.coffee  cron.coffee  main.coffee
src_old/conn/: STATE.coffee
src_old/lib/: getMap.coffee  getSet.coffee  recover.coffee  warn.coffee
src_old/watch/: mysql.coffee
warn/: README.md  dist.sh  package.json  test.sh
warn/cf/: .dev.vars.sha256  package.json
warn/sh/: mergePackage.coffee
warn/src/: Pg.coffee  cron.coffee  initSend.coffee  main.coffee  ping.coffee  state.js
web/: package.json
web/conf/: pug.env
web/src/: _.pug  index.pug
