[package]
name = "host_ip"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/state.git"
homepage = "https://github.com/i18n-site/state/tree/dev/rust/host_ip"
description = "host_ip"
keywords = []

[dependencies]
sonic-rs = "0.3.17"
static_init = "1.0.3"
tracing = "0.1.41"
