[package]
name = "ipv6_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
aok = "0.1.17"
genv = "0.1.16"
pg_ = { version = "0.1.1", path = "../pg_", features = ["heartbeat"] }
reqwest = "0.12.12"
sonic-rs = "0.3.17"
static_init = "1.0.3"

[dev-dependencies]
loginit = "0.1.18"
tokio = { version = "1.43.0", features = ["rt", "time", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
