[package]
name = "pg_"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/state.git"
homepage = "https://github.com/i18n-site/state/tree/dev/rust/pg_"
description = "pg_"
keywords = []

[features]
default = []
heartbeat = ["dep:notify_api", "dep:hsec"]

[dependencies]
hsec = { version = "0.1.1", optional = true }
notify_api = { version = "0.1.3", optional = true }
pgw = { version = "0.2.17", features = ["global"] }
s_ = "0.1.6"
static_init = "1.0.3"
tokio = { version = "1.43.0", features = ["rt"] }
tracing = "0.1.41"
xerr = "0.1.15"

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
