[package]
name = "srv"
version = "0.1.0"
edition = "2024"

[dependencies]
aok = "0.1.17"
axum = { version = "0.8.1", features = ["tracing", "macros"] }
axum_layer = "0.1.8"
genv = "0.1.15"
loginit = "0.1.18"
smtptls = { version = "0.1.0", path = "../smtptls" }
tokio = { version = "1.43.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1.41"
xboot = "0.1.28"
xerr = "0.1.15"
