[package]
name = "srv"
version = "0.1.0"
edition = "2024"

[dependencies]
aok = "0.1.17"
axum = { version = "0.8.1", features = ["tracing", "macros"] }
axum_layer = "0.1.11"
boxleak = "0.1.1"
genv = "0.1.16"
ipv6_proxy = { version = "0.1.0", path = "../ipv6_proxy" }
loginit = "0.1.18"
smtp = { version = "0.1.0", path = "../smtp" }
token_send = "0.1.4"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1.41"
xboot = "0.1.28"
xerr = "0.1.15"
